Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Moved clearing of CVAR_CHANGED flag from
      scr_fov and scr_viewsize to SCR_CalcRefdef().

2011-12-25 (SVN):
    * snd_dma.c: Removed oldvolume global. Relying on CVAR_CHANGED flag
      of sfxvolume now.

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Removed oldfov and oldscreensize globals.
      SCR_SizeUp_f and SCR_SizeDown_f no longer set vid.recalc_refdef.
      Relying on CVAR_CHANGED flags of scr_fov and scr_viewsize now.

2011-12-25 (SVN):
    * menu.c: Do not directly manipulate cvars' values, use automatic
      variables instead.
    * quakedef.h: updated beta date stamp to 2011-12-25.

2011-12-24 (SVN):
    * cfgfile: changed to use FS_ functions, patch from Sander van Dijk.
      updated copyright years.

2011-12-24 (SVN):
    * quakefs: added FS_fgets(), patch from Sander van Dijk.
    * quakedef.h: updated beta date stamp to 2011-12-24.

2011-12-23 (SVN):
    * Added new CVAR_CALLBACK flag.  Made Cvar_SetCallback() to adjust
      the CVAR_CALLBACK flag.  Made Cvar_RegisterVariable() to set the
      callback to NULL if CVAR_CALLBACK is not present, just in case..

2011-12-23 (SVN):
    * Moved notification handling from Cvar_Set() to callback functions.

2011-12-23 (SVN):
    * Moved coop and deathmatch value clash handling from Cvar_Set() to
      callback functions.

2011-12-23 (SVN):
    * Added a callback mechanism to the cvar layer.

2011-12-23 (SVN):
    * When the value is a numeric constant (excluding any macros), use
      Cvar_Set() instead of Cvar_SetValue().
    * quakedef.h: updated beta date stamp to 2011-12-23.

2011-12-22 (SVN):
    * snd_gus.c: Store the dma address received from dos_getmemory() in
      a different pointer variable so we can free it during shutdown.
      This, in case if I ever implement a snd_restart like mechanism.